--- a/protobuf/pom.xml
+++ b/protobuf/pom.xml
@@ -34,6 +34,10 @@
                         <goals>
                             <goal>run</goal>
                         </goals>
+                        <configuration>
+                            <protocVersion>3.8.0</protocVersion>
+                            <includeStdTypes>true</includeStdTypes>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
