--- a/maven-war-exploded/pom.xml
+++ b/maven-war-exploded/pom.xml
@@ -11,15 +11,11 @@
 	<groupId>com.example</groupId>
 	<artifactId>webapp</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>pom</packaging>
-	<name>demo</name>
+	<packaging>war</packaging>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
-	<modules>
-		<module>api</module>
-	</modules>
 	<dependencies>
 		<dependency>
 			<groupId>com.example</groupId>
