--- a/maven-war-exploded/webapp/pom.xml
+++ b/maven-war-exploded/webapp/pom.xml
@@ -21,6 +21,7 @@
 			<groupId>com.example</groupId>
 			<artifactId>api</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
+			<type>pom</type>
 		</dependency>
 
 		<dependency>
