--- a/maven-war-exploded/api/pom.xml
+++ b/maven-war-exploded/api/pom.xml
@@ -8,11 +8,17 @@
     <packaging>pom</packaging>
     <modules>
         <module>hello-service</module>
+        <module>name-service</module>
     </modules>
     <dependencies>
         <dependency>
             <groupId>com.example</groupId>
             <artifactId>api.hello-service</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.example</groupId>
+            <artifactId>api.name-service</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
