--- a/maven-war-exploded/pom.xml
+++ b/maven-war-exploded/pom.xml
@@ -8,6 +8,6 @@
     <packaging>pom</packaging>
     <modules>
         <module>webapp</module>
-        <module>api</module>
+        <module>hello-service</module>
     </modules>
 </project>
