maven war plugin

--- a/maven-war-plugin/pom.xml
+++ b/maven-war-plugin/pom.xml
@@ -8,6 +8,6 @@
     <packaging>pom</packaging>
     <modules>
         <module>webapp</module>
-        <module>webapp-dependency</module>
+        <module>dependency</module>
     </modules>
 </project>
