--- a/maven-war-plugin/webapp/pom.xml
+++ b/maven-war-plugin/webapp/pom.xml
@@ -14,6 +14,15 @@
 		<maven.compiler.target>17</maven.compiler.target>
 	</properties>
 
+	<dependencies>
+		<dependency>
+			<groupId>com.demo.examples</groupId>
+			<artifactId>dependency</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+			<type>war</type>
+		</dependency>
+	</dependencies>
+
 	<build>
 		<plugins>
 			<plugin>
@@ -25,6 +34,12 @@
 							<addClasspath>true</addClasspath>
 						</manifest>
 					</archive>
+					<overlays>
+						<overlay>
+							<groupId>com.demo.examples</groupId>
+							<artifactId>dependency</artifactId>
+						</overlay>
+					</overlays>
 				</configuration>
 			</plugin>
 		</plugins>
