--- a/maven-war-plugin/webapp/pom.xml
+++ b/maven-war-plugin/webapp/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>com.demo.examples</groupId>
 	<artifactId>webapp</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
-	<name>Maven war example</name>
+	<name>webapp</name>
 	<url>http://maven.apache.org</url>
 	<packaging>war</packaging>
 
@@ -40,6 +40,12 @@
 							<artifactId>dependency</artifactId>
 						</overlay>
 					</overlays>
+					<webResources>
+						<resource>
+							<!-- this is relative to the pom.xml directory -->
+							<directory>external-resources</directory>
+						</resource>
+					</webResources>
 				</configuration>
 			</plugin>
 		</plugins>
