--- a/maven-war-plugin/dependency/pom.xml
+++ b/maven-war-plugin/dependency/pom.xml
@@ -4,7 +4,7 @@
     <groupId>com.demo.examples</groupId>
     <artifactId>dependency</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <name>War dependency</name>
+    <name>dependency</name>
     <url>http://maven.apache.org</url>
     <packaging>war</packaging>
 
